force-app/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <description>Track professional and educational experiences to display on a Resume.</description>
    <label>Experience</label>
    <nameField>
        <displayFormat>X-{0000}</displayFormat>
        <label>Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>