force-app/main/default/objects/Experience__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Accounts</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>