force-app/main/default/objects/Experience__c/fields/Degree_Earned__c.field-meta.xml
<CustomField>
    <fullName>Degree_Earned__c</fullName>
    <description>Degree earned</description>
    <label>Degree Earned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>