force-app/main/default/objects/Experience__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Experience</description>
    <inlineHelpText>Enter in your Job Title</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>