force-app/main/default/objects/Experience__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User the experience is associated with.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>