force-app/main/default/objects/Experience__c/recordTypes/Professional.recordType-meta.xml
<RecordType>
    <fullName>Professional</fullName>
    <active>true</active>
    <description>Professional Work Experience</description>
    <label>Professional</label>
</RecordType>